# harbor

./: .dockerignore  .gitignore  Cargo.toml  README.md  build-images.sh  compose.yml  convert.sh  osm_pbf_processor.toml  spacetime.json
harbor/: Cargo.toml  Dockerfile  README.md  container-entrypoint.sh  container-index.html
harbor/.cargo/: config.toml
harbor/assets/models/: container_ship.glb  container_ship2.glb  sail_boat.glb  sail_boat.mtl  speedboat.glb  sydney_emerald-class_low_poly.glb  tugboat.glb
harbor/src/: camera.rs  demo.rs  light.rs  main.rs  map.rs  perf.rs  runtime.rs  ship.rs  ship_class.rs  spacetime.rs  ui.rs  wave_rocking.rs
harbor/src/module_bindings/: add_location_report_reducer.rs  add_ship_reducer.rs  backfill_major_ship_types_reducer.rs  geo_point_type.rs  mod.rs  project_ship_locations_reducer.rs  set_current_projection_request_reducer.rs  set_current_time_reducer.rs  ship_projection_type.rs  ship_table.rs  street_poi_type.rs  town_poi_table.rs  update_street_reducer.rs  upsert_ship_static_data_reducer.rs
harbor/src/spacetime/: mod.rs
harbor/src/static_landmarks/: bridge.rs
location-source/: Cargo.toml  Dockerfile
location-source/src/: _ais.txt  add_location_report_reducer.rs  location_report_type.rs  location_reporter_table.rs  main.rs  mod.rs  ship_table.rs
location-viewer/: Cargo.toml
location-viewer/src/: main.rs
osm_pbf_processor/: Cargo.toml  Dockerfile  README.md  debug-building-only.toml  debug-land-only.toml  debug-transport-only.toml  debug-water-only.toml  osm_pbf_processor.compose.toml  osm_pbf_processor.toml
osm_pbf_processor/src/: building.rs  cli.rs  config.rs  gltf_export.rs  land.rs  main.rs  mesh.rs  report.rs  server.rs  simplify.rs  tile_io.rs  transportation.rs  water.rs
osm_pbf_processor/src/module_bindings/: current_projection_request_type.rs  global_state_table.rs  set_current_projection_request_reducer.rs  ship_type.rs  street_poi_table.rs  town_poi_type.rs  update_town_reducer.rs
osm_pbf_processor/src/poi/: mod.rs
osm_pbf_processor/src/tile/: clip.rs  mod.rs  mvt.rs  polygon_decode.rs  tile_io.rs
osm_pbf_processor/src/tile/export/: gltf_export.rs  mod.rs
osm_pbf_processor/src/tile/features/: building.rs  land.rs  mesh.rs  mod.rs  transportation.rs  water.rs
scripts/: config.json  convert.sh  get-coastline.sh  get-landcover.sh  get-netherlands.sh  process-coastline.lua  setup.sh
spacetimedb/: Cargo.toml
spacetimedb/src/: global.rs  lib.rs  mmsi_types.rs
src/: main.rs
src/module_bindings/: add_ship_reducer.rs
traefik/: dynamic.yml
(+29 files in other folders)
