[workspace]
members = ["harbor", "location-source", "osm_pbf_processor"]
exclude = ["spacetimedb"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.32"
env_logger = "0.11"
spacetimedb-sdk = { version = "2.3.*" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
