[package]
name = "harbor"
version = "0.1.0"
edition = "2024"

[features]
default = []
chrome_trace = ["bevy/trace_chrome"]

[dependencies]
bevy = { version = "0.18.1", features = ["default", "bevy_text", "bevy_gltf", "bevy_pbr", "shader_format_glsl", "tga"] }
bevy_obj = "0.18.2"
bevy_egui = "0.39.1"
bevy_stdb = "0.8.1"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "std"] }
spacetimedb-sdk.workspace = true

bevy_light = "0.18.1"
bevy_panorbit_wasd_camera = { version = "0.34.0", features = ["bevy_egui"] }
bevy_water = "0.18.1"
ureq = "2.12.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_stdb = { version = "0.8.1", features = ["browser"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.98", features = ["Window", "Location", "UrlSearchParams"] }
web-time = "1.1.0"
